--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "todo-list",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://robenten.github.io/react-todo-list/",
   "dependencies": {
     "classnames": "^2.2.6",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "scripts": {
     "start": "react-scripts start",
